@startuml

title __COMMON's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      abstract class com.aaron.justlike.common.CommonActivity {
          + finish()
          + startActivity()
          # onCreate()
          # onDestroy()
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      class com.aaron.justlike.common.JustLike {
          {static} - sContext : Context
          {static} + getContext()
          + onCreate()
          - leakCanary()
          - litepal()
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      class com.aaron.justlike.common.SplashActivity {
          + onWindowFocusChanged()
          # onCreate()
          # onDestroy()
          - animation()
          - openActivity()
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      class com.aaron.justlike.common.SplashActivity.NetworkReceiver {
          + onReceive()
      }
    }
  }
  

  com.aaron.justlike.common.CommonActivity -up-|> com.aaron.base.base.BaseActivity
  com.aaron.justlike.common.JustLike -up-|> android.app.Application
  com.aaron.justlike.common.SplashActivity -up-|> com.aaron.justlike.common.CommonActivity
  com.aaron.justlike.common.SplashActivity o-- com.aaron.justlike.common.SplashActivity.NetworkReceiver : mReceiver
  com.aaron.justlike.common.SplashActivity +-down- com.aaron.justlike.common.SplashActivity.NetworkReceiver
  com.aaron.justlike.common.SplashActivity.NetworkReceiver -up-|> android.content.BroadcastReceiver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
